--- a/espresso-framework/pom.xml
+++ b/espresso-framework/pom.xml
@@ -20,6 +20,11 @@
             <version>1.18.30</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.0</version>
+        </dependency>
     </dependencies>
 
 </project>
